<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".allIN"
    android:padding="15dp"
    android:background="@drawable/bg_reg"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView

                android:id="@+id/textView2"
                android:layout_width="322dp"
                android:layout_height="98dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="28dp"
                android:gravity="center"
                android:text="@string/description"
                android:textSize="40dp"
                android:textColor="@color/brown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/notes"
                android:layout_width="367dp"
                android:layout_height="32dp"
                android:layout_alignBottom="@id/textView2"
                android:layout_marginTop="10dp"
                android:textColor="@color/brown"
                android:text="@string/notes"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notes"
                app:counterEnabled="true"
                app:counterMaxLength="20"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/brown"
                    android:hint="@string/survey_1"
                    android:inputType="text"
                    android:maxLength="21"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="144dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.052"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/brown"
                    android:hint="@string/survey_2"
                    android:inputType="text|number"
                    android:maxLength="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="252dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.241"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/brown"
                    android:hint="@string/survey_3"
                    android:inputType="text|number"
                    android:maxLength="3"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/proceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Proceed"
                android:backgroundTint="@color/brown"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_weight"
                app:layout_constraintVertical_bias="0.316"
                android:onClick="validate"/>
        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
